new divs, css update, use-strict added

--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,20 @@
 #basket
 {
-    height: 1000px !important;
+    height: 2000px !important;
     background-color: rgba(228, 215, 215, 0.63);
     border-radius: 20px; 
 }
 
 #cart
 {
-    height: 1000px !important;
+    height: 2000px !important;
     background-color: rgba(219, 209, 209, 0.459); 
     border-radius: 20px;
 }
 
 #checkout
 {
-    height: 1000px !important;
+    height: 2000px !important;
     background-color: rgba(204, 189, 189, 0.301);
     border-radius: 20px; 
 }
@@ -22,4 +22,6 @@
 body
 {
     background: linear-gradient(to bottom right, black 0%, white 100%);
+    max-width: 100%;
+    overflow-x: hidden;
 }
